Format it a little bit better

--- a/WhaleLanguage.ipynb
+++ b/WhaleLanguage.ipynb
@@ -56,7 +56,11 @@
     "    vowels = [\"A\", \"E\", \"I\", \"O\", \"U\"]\n",
     "    vowels_to_repeat = [\"E\", \"U\"]\n",
     "    return \"\".join(\n",
-    "        [c*slow_repetitions if c in vowels_to_repeat else c for c in line.upper() if c in vowels ]\n",
+    "        [\n",
+    "            c*slow_repetitions if c in vowels_to_repeat else c \n",
+    "            for c in line.upper() \n",
+    "            if c in vowels \n",
+    "        ]\n",
     "    )"
    ]
   },
